--- a/FaveAssessment/Environment/General.xcconfig
+++ b/FaveAssessment/Environment/General.xcconfig
@@ -10,3 +10,4 @@
 
 BASE_URL          = http:/$()/api.themoviedb.org/3/discover/movie
 API_KEY           = 328c283cd27bd1877d9080ccb1604c91
+IMAGE_URL         = https:/$()/image.tmdb.org/t/p/w154
