--- a/FaveAssessment/Resources/Info.plist
+++ b/FaveAssessment/Resources/Info.plist
@@ -20,11 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-    <key>NSAppTransportSecurity</key>
-      <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-      </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -50,6 +50,8 @@
 	<string>LaunchScreen</string>
 	<key>BASE_URL</key>
 	<string>$(BASE_URL)</string>
+	<key>IMAGE_URL</key>
+	<string>$(IMAGE_URL)</string>
 	<key>API_KEY</key>
 	<string>$(API_KEY)</string>
 	<key>UIMainStoryboardFile</key>
