--- a/FaveAssessment/Environment/General.xcconfig
+++ b/FaveAssessment/Environment/General.xcconfig
@@ -8,6 +8,7 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-BASE_URL          = http:/$()/api.themoviedb.org/3/discover/movie
-API_KEY           = 328c283cd27bd1877d9080ccb1604c91
-IMAGE_URL         = https:/$()/image.tmdb.org/t/p/w154
+BASE_URL             = http:/$()/api.themoviedb.org/3
+API_KEY              = 328c283cd27bd1877d9080ccb1604c91
+IMAGE_URL            = https:/$()/image.tmdb.org/t/p/w154
+LARGE_IMAGE_URL      = https:/$()/image.tmdb.org/t/p/original
